Arreglo base de datos y otros
He arreglado la base de datos y cambiado algunos aspectos visuales en scenebuilder como los botones de la vista combate.

--- a/bin/view/equipo.fxml
+++ b/bin/view/equipo.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControladorEquipo">
+<AnchorPane prefHeight="458.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControladorEquipo">
    <children>
-      <ImageView fx:id="fondoEquipo" fitHeight="444.0" fitWidth="603.0">
+      <ImageView fx:id="fondoEquipo" fitHeight="458.0" fitWidth="611.0">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_equipo_603x444.png" />
+            <Image url="@../Imagenes/fondo/fondo_equipo.png" />
          </image>
       </ImageView>
       <Label layoutX="104.0" layoutY="362.0" prefHeight="54.0" prefWidth="274.0" text="Elije un Pokémon.">
@@ -19,7 +19,7 @@
             <Font name="Verdana Bold" size="26.0" />
          </font>
       </Label>
-      <ImageView fx:id="imgPoke1" fitHeight="116.0" fitWidth="126.0">
+      <ImageView fx:id="imgPoke1" fitHeight="116.0" fitWidth="126.0" layoutY="6.0">
          <image>
             <Image url="@../Imagenes/Pokemon/Front/1.png" />
          </image>
@@ -117,42 +117,42 @@
       </Label>
       <ImageView fx:id="btnMoverCaja2" fitHeight="54.0" fitWidth="76.0" layoutX="535.0" layoutY="79.0" onMouseClicked="#btnMoverCaja2Click" onMouseEntered="#btnMoverCaja2Enter" onMouseExited="#btnMoverCaja2Exit" style="-fx-cursor: hand; -fx-opacity: 1.0;">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_boton.png" />
+            <Image url="@../Imagenes/boton/fondo_boton.png" />
          </image>
       </ImageView>
       <ImageView fx:id="btnMoverCaja1" fitHeight="54.0" fitWidth="76.0" layoutX="235.0" layoutY="79.0" onMouseClicked="#btnMoverCaja1Click" onMouseEntered="#btnMoverCaja1Enter" onMouseExited="#btnMoverCaja1Exit" style="-fx-cursor: hand; -fx-opacity: 1.0;" styleClass="image-boton">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_boton.png" />
+            <Image url="@../Imagenes/boton/fondo_boton.png" />
          </image>
       </ImageView>
       <ImageView fx:id="btnMoverCaja4" fitHeight="54.0" fitWidth="76.0" layoutX="535.0" layoutY="181.0" onMouseClicked="#btnMoverCaja4Click" onMouseEntered="#btnMoverCaja4Enter" onMouseExited="#btnMoverCaja4Exit" style="-fx-cursor: hand; -fx-opacity: 1.0;">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_boton.png" />
+            <Image url="@../Imagenes/boton/fondo_boton.png" />
          </image>
       </ImageView>
       <ImageView fx:id="btnMoverCaja6" fitHeight="54.0" fitWidth="76.0" layoutX="535.0" layoutY="285.0" onMouseClicked="#btnMoverCaja6Click" onMouseEntered="#btnMoverCaja6Enter" onMouseExited="#btnMoverCaja6Exit" style="-fx-cursor: hand; -fx-opacity: 1.0;">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_boton.png" />
+            <Image url="@../Imagenes/boton/fondo_boton.png" />
          </image>
       </ImageView>
       <ImageView fx:id="btnMoverCaja3" fitHeight="54.0" fitWidth="76.0" layoutX="235.0" layoutY="178.0" onMouseClicked="#btnMoverCaja3Click" onMouseEntered="#btnMoverCaja3Enter" onMouseExited="#btnMoverCaja3Exit" style="-fx-cursor: hand; -fx-opacity: 1.0;">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_boton.png" />
+            <Image url="@../Imagenes/boton/fondo_boton.png" />
          </image>
       </ImageView>
       <ImageView fx:id="btnMoverCaja5" fitHeight="54.0" fitWidth="76.0" layoutX="235.0" layoutY="285.0" onMouseClicked="#btnMoverCaja5Click" onMouseEntered="#btnMoverCaja5Enter" onMouseExited="#btnMoverCaja5Exit" style="-fx-cursor: hand; -fx-opacity: 1.0;">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_boton.png" />
+            <Image url="@../Imagenes/boton/fondo_boton.png" />
          </image>
       </ImageView>
       <ImageView fx:id="btnVolver" fitHeight="89.0" fitWidth="90.0" layoutX="508.0" layoutY="-18.0" onMouseClicked="#btnVolverClick" onMouseEntered="#btnVolverEnter" onMouseExited="#btnVolverExit" style="-fx-cursor: hand; -fx-opacity: 1.0;">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_boton_volver.png" />
+            <Image url="@../Imagenes/boton/fondo_boton_volver.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnVerCaja" fitHeight="140.0" fitWidth="139.0" layoutX="469.0" layoutY="318.0" onMouseClicked="#btnVerCajaClick" onMouseEntered="#btnVerCajaEnter" onMouseExited="#btnVerCajaExit" style="-fx-cursor: hand; -fx-opacity: 1.0;">
+      <ImageView fx:id="btnVerCaja" fitHeight="116.0" fitWidth="136.0" layoutX="477.0" layoutY="339.0" onMouseClicked="#btnVerCajaClick" onMouseEntered="#btnVerCajaEnter" onMouseExited="#btnVerCajaExit" style="-fx-cursor: hand; -fx-opacity: 1.0;">
          <image>
-            <Image url="@../../../Users/sergi/Downloads/fondo_boton_caja.png" />
+            <Image url="@../Imagenes/boton/fondo_boton_caja.png" />
          </image>
       </ImageView>
    </children>
