--- a/src/view/combate.fxml
+++ b/src/view/combate.fxml
@@ -41,7 +41,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <GridPane layoutX="-1.0" layoutY="294.0" prefHeight="131.0" prefWidth="838.0" AnchorPane.bottomAnchor="8.800000000000011" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="-0.6000000000000227" AnchorPane.topAnchor="294.0">
+      <GridPane layoutX="-1.0" layoutY="294.0" prefHeight="131.0" prefWidth="838.0" style="-fx-background-color: lightgreen;" AnchorPane.bottomAnchor="8.800000000000011" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="-0.6000000000000227" AnchorPane.topAnchor="294.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -52,30 +52,30 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="attackBtn1" mnemonicParsing="false" onAction="#onAttack1" prefHeight="60.0" prefWidth="434.0" style="-fx-background-color: lightgreen; -fx-border-color: black;" text="Ataque 1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+            <Button fx:id="attackBtn1" mnemonicParsing="false" onAction="#onAttack1" prefHeight="60.0" prefWidth="434.0" style="-fx-background-color: lightgreen; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;" text="Ataque 1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="13.0" />
                </font>
             </Button>
-            <Button fx:id="attackBtn2" mnemonicParsing="false" onAction="#onAttack2" prefHeight="60.0" prefWidth="434.0" style="-fx-background-color: lightgreen; -fx-border-color: black;" text="Ataque 2" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+            <Button fx:id="attackBtn2" mnemonicParsing="false" onAction="#onAttack2" prefHeight="60.0" prefWidth="434.0" style="-fx-background-color: lightgreen; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;" text="Ataque 2" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="13.0" />
                </font></Button>
-            <Button fx:id="attackBtn3" mnemonicParsing="false" onAction="#onAttack3" prefHeight="60.0" prefWidth="434.0" style="-fx-background-color: lightgreen; -fx-border-color: black;" text="Ataque 3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+            <Button fx:id="attackBtn3" mnemonicParsing="false" onAction="#onAttack3" prefHeight="60.0" prefWidth="434.0" style="-fx-background-color: lightgreen; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;" text="Ataque 3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="13.0" />
                </font></Button>
-            <Button fx:id="attackBtn4" mnemonicParsing="false" onAction="#onAttack4" prefHeight="60.0" prefWidth="434.0" style="-fx-background-color: lightgreen; -fx-border-color: black;" text="Ataque 4" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+            <Button fx:id="attackBtn4" mnemonicParsing="false" onAction="#onAttack4" prefHeight="60.0" prefWidth="434.0" style="-fx-background-color: lightgreen; -fx-border-color: black; -fx-background-radius: 10px; -fx-border-radius: 10px;" text="Ataque 4" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="13.0" />
                </font></Button>
-            <Button fx:id="switchCombatPokemon" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAttack3" prefHeight="40.0" prefWidth="605.0" style="-fx-background-color: lightblue; -fx-border-color: black; -fx-border-width: 2;" text="Cambiar Pokémon" translateY="6.5" GridPane.rowIndex="2">
+            <Button fx:id="switchCombatPokemon" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAttack3" prefHeight="40.0" prefWidth="606.0" style="-fx-background-color: lightblue; -fx-border-color: black; -fx-border-width: 2; -fx-background-radius: 10px; -fx-border-radius: 10px;" text="Cambiar Pokémon" translateY="6.5" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
