--- a/bin/view/CentroPokemon.fxml
+++ b/bin/view/CentroPokemon.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
@@ -39,94 +40,105 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <VBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <ImageView fx:id="btnCurarPokemon" fitHeight="611.0" fitWidth="1040.0" layoutX="14.0" layoutY="-16.0" pickOnBounds="true" preserveRatio="true">
+        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+          <font>
+            <Font size="18.0" />
+          </font>
+        </Label>
+            <ImageView fx:id="btnCurarPokemon" fitHeight="690.0" fitWidth="844.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../imagenes/imgCentroPokemon.png" />
+                  <Image url="@../imagenes/fondo/fondo_centroPokemon.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="413.0" fitWidth="470.0" layoutX="357.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
+            <ProgressBar fx:id="bar6" layoutX="463.0" layoutY="497.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar1" layoutX="48.0" layoutY="206.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar5" layoutX="55.0" layoutY="497.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar3" layoutX="55.0" layoutY="348.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar4" layoutX="463.0" layoutY="348.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar2" layoutX="463.0" layoutY="206.0" prefWidth="200.0" progress="0.0" />
+            <ImageView fitHeight="68.0" fitWidth="157.0" layoutX="273.0" layoutY="564.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../imagenes/enfermeraJoy.png" />
+                  <Image url="@../imagenes/boton/imgCurarPokemons.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="btnCurarPokemons" fitHeight="107.0" fitWidth="404.0" layoutX="302.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="86.0" fitWidth="143.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../imagenes/txtCentroPokemon.png" />
+                  <Image url="@../imagenes/boton/imgCentroPokemon.png" />
                </image>
             </ImageView>
-            <Label fx:id="lbl5" layoutX="188.0" layoutY="409.0" text="Label" />
-            <Label fx:id="lbl4" layoutX="750.0" layoutY="301.0" text="Label" />
-            <Label fx:id="lbl2" layoutX="748.0" layoutY="195.0" text="Label" />
-            <Label fx:id="lbl3" layoutX="188.0" layoutY="301.0" text="Label" />
-            <Label fx:id="lbl1" layoutX="188.0" layoutY="195.0" text="Label" />
-            <Label fx:id="lbl6" layoutX="750.0" layoutY="409.0" text="Label" />
-            <ProgressBar fx:id="bar6" layoutX="662.0" layoutY="438.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar1" layoutX="102.0" layoutY="222.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar5" layoutX="102.0" layoutY="438.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar3" layoutX="102.0" layoutY="327.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar4" layoutX="662.0" layoutY="327.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar2" layoutX="664.0" layoutY="222.0" prefWidth="200.0" progress="0.0" />
-            <Button fx:id="btnSalir" layoutX="891.0" layoutY="532.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="52.0" text="Salir">
+            <ImageView fx:id="pkm6" fitHeight="150.0" fitWidth="200.0" layoutX="488.0" layoutY="358.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm5" fitHeight="150.0" fitWidth="200.0" layoutX="82.0" layoutY="358.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm4" fitHeight="150.0" fitWidth="200.0" layoutX="488.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm3" fitHeight="150.0" fitWidth="200.0" layoutX="82.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm2" fitHeight="150.0" fitWidth="200.0" layoutX="488.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm1" fitHeight="150.0" fitWidth="200.0" layoutX="82.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="pkmlbl1" layoutX="136.0" layoutY="181.0" text="Label">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Yu Gothic Regular" size="16.0" />
                </font>
+            </Label>
+            <Label fx:id="pkmlbl2" layoutX="542.0" layoutY="181.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="pkmlbl3" layoutX="136.0" layoutY="328.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="pkmlbl4" layoutX="542.0" layoutY="328.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="pkmlbl5" layoutX="136.0" layoutY="472.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font></Label>
+            <Label fx:id="pkmlbl6" layoutX="542.0" layoutY="472.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font>
+            </Label>
+            <Button id="btnSalir" fx:id="btnSalir" layoutX="599.0" layoutY="637.0" mnemonicParsing="false" onAction="#salir" text="Salir">
+               <font>
+                  <Font name="Lucida Console" size="18.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="OPEN_HAND" />
+               </cursor>
             </Button>
-            <Text layoutX="216.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enfermera Joy">
-               <font>
-                  <Font name="Candara Bold" size="22.0" />
-               </font>
-               <fill>
-                  <LinearGradient endX="1.0" endY="1.0">
-                     <stops>
-                        <Stop>
-                           <color>
-                              <Color red="1.0" green="0.4481481611728668" blue="0.7148765325546265" />
-                           </color>
-                        </Stop>
-                        <Stop offset="0.006729475100942127">
-                           <color>
-                              <Color red="1.0" green="0.4481481611728668" blue="0.7148765325546265" />
-                           </color>
-                        </Stop>
-                        <Stop offset="1.0">
-                           <color>
-                              <Color red="1.0" />
-                           </color>
-                        </Stop>
-                     </stops>
-                  </LinearGradient>
-               </fill>
-            </Text>
-            <ImageView fitHeight="107.0" fitWidth="121.0" layoutX="155.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/señalCentroPokemon.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="107.0" fitWidth="120.0" layoutX="750.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/menu/centroPokemon.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnCurarPokemons" layoutX="381.0" layoutY="483.0" mnemonicParsing="false" onAction="#curarPokemons" prefHeight="63.0" prefWidth="245.0" style="-fx-background-color: #ff5b5d; -fx-background-radius: 25px; -fx-border-radius: 25px;" text="Curar Pokemons" textFill="WHITE">
-               <font>
-                  <Font name="Monospaced Regular" size="24.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="78.0" fitWidth="216.0" layoutX="396.0" layoutY="486.0" onDragDetected="#curarPokemons" onMouseClicked="#curarPokemons" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/imgCurarPokemons.png" />
-               </image>
-            </ImageView>
       </children>
     </AnchorPane>
   </children>
