Botones Captura, Centro Pokémon y otros arreglados
He arreglado brevemente la funcionalidad de algunos botones del menú y de dichas vistas.

Co-Authored-By: Iván <ivanjesuscp@outlook.com>

--- a/bin/view/CentroPokemon.fxml
+++ b/bin/view/CentroPokemon.fxml
@@ -42,7 +42,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CentroPokemonController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
