Implementado sistema de vida real para Pokémon enemigos en combate
He corregido la barra de vida y el texto de HP del Pokémon enemigo con sus estadísticas reales cargadas desde la base de datos. Al iniciar un combate, el enemigo generado muestra su nombre e imagen junto con su vitalidad correcta. Esto permite reflejar el estado real del enemigo durante el combate. También he implementado pequeños detalles en algunas vistas como combate y equipo para evitar  que no se muestre completamente la vida o nombre de los pokémons.

--- a/bin/view/combate.fxml
+++ b/bin/view/combate.fxml
@@ -22,12 +22,12 @@
       </ImageView>
       <ProgressBar fx:id="enemyHealthBar" layoutX="109.0" layoutY="86.0" prefHeight="14.0" prefWidth="150.0" progress="0.38" style="-fx-accent: #4CAF50;" />
       <ProgressBar fx:id="playerHealthBar" layoutX="436.0" layoutY="254.0" prefHeight="14.0" prefWidth="140.0" progress="0.18" style="-fx-accent: #4CAF50;" />
-      <Label fx:id="enemyNameLabel" layoutX="61.0" layoutY="62.0" prefHeight="18.0" prefWidth="150.0" text="Pokémon">
+      <Label fx:id="enemyNameLabel" layoutX="61.0" layoutY="62.0" prefHeight="18.0" prefWidth="160.0" text="Pokémon" textFill="WHITE">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <Label fx:id="playerNameLabel" layoutX="387.0" layoutY="228.0" prefHeight="18.0" prefWidth="150.0" text="Pokémon">
+      <Label fx:id="playerNameLabel" layoutX="387.0" layoutY="228.0" prefHeight="18.0" prefWidth="160.0" text="Pokémon" textFill="WHITE">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
